<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".Localization.Localization">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/bungee"
        android:text="@string/localization_your_current_location"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/city_name"
        style="@style/localization_main_field"
        android:text="@string/activity_add_need_ride_city" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/localization_city_name"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/city_population"
        style="@style/localization_main_field"
        android:layout_marginTop="10dp"
        android:text="@string/localization_population_placeholder" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/localization_population"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/city_division"
        style="@style/localization_main_field"
        android:layout_marginTop="10dp"
        android:text="@string/localization_province" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/localization_province"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/city_country"
        style="@style/localization_main_field"
        android:layout_marginTop="10dp"
        android:text="@string/localization_country" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/localization_country"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/localization_bored_of_traveling"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/localization_check_youtube"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <ImageView
        android:id="@+id/localization_yt"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:src="@drawable/youtube" />

</LinearLayout>