<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/dialog_relative_layout">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_background"
        android:orientation="vertical"
        android:padding="40dp">

        <TextView
            style="@style/w_wrap_h_wrap"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:text="@string/user_profile_delete_account_question"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/dialog_delete_account_are_you_sure_text_size"
            android:textStyle="bold" />

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:text="@string/user_profile_delete_account_results"
            android:textAlignment="center"
            android:textSize="@dimen/dialog_delete_account_consequences_of_account_deletion_text_size" />

        <LinearLayout
            style="@style/w_wrap_h_wrap"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/delete_account_YES"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/round_background"
                android:text="@string/YES"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/delete_account_NO"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/round_background"
                android:text="@string/NO"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>